--- a/learn_flutter_app/pubspec.yaml
+++ b/learn_flutter_app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   url_launcher: ^5.0.2
   http: ^0.12.0+2
+  flutter_swiper: ^1.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,6 +44,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - images/1.jpg
+    - images/2.jpg
+    - images/3.jpg
+    - images/4.jpg
+    - images/5.jpg
+    - images/6.jpg
+    - images/7.jpg
+    - images/8.jpg
+    - images/9.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
